--- a/homework-for-week-8.html
+++ b/homework-for-week-8.html
@@ -43,9 +43,9 @@
     }
   </style>
 <link rel="stylesheet" href="style.css">
-<meta name="description" content="Students as Learners: Finish this week’s worksheet Read the required literature for Week 8 Students as Researchers: Choose the region for your summative assessment. Create an outline (A4, bullet...">
-<meta property="og:description" content="Students as Learners: Finish this week’s worksheet Read the required literature for Week 8 Students as Researchers: Choose the region for your summative assessment. Create an outline (A4, bullet...">
-<meta name="twitter:description" content="Students as Learners: Finish this week’s worksheet Read the required literature for Week 8 Students as Researchers: Choose the region for your summative assessment. Create an outline (A4, bullet...">
+<meta name="description" content="Students as Learners: Finish this week’s worksheet Read the required literature for Week 8 Mark the essay linked below. We will go through this in Week 8. The fully annotated version (below) will...">
+<meta property="og:description" content="Students as Learners: Finish this week’s worksheet Read the required literature for Week 8 Mark the essay linked below. We will go through this in Week 8. The fully annotated version (below) will...">
+<meta name="twitter:description" content="Students as Learners: Finish this week’s worksheet Read the required literature for Week 8 Mark the essay linked below. We will go through this in Week 8. The fully annotated version (below) will...">
 </head>
 <body data-spy="scroll" data-target="#toc">
 
@@ -130,7 +130,15 @@
 <li>Finish this week’s worksheet</li>
 <li>Read the <a href="https://rl.talis.com/3/warwick/lists/E5FA4027-27A7-AFB0-AAF4-C891BCCD83E2.html#D3AE6FE6-BC94-45C6-68DA-576418AD3AC2">required literature for Week 8</a>
 </li>
+<li>Mark the essay linked below. We will go through this in Week 8. The fully annotated version (below) will become availabel after the seminar in Week 8.</li>
 </ul>
+<p><a class="delayed-download btn btn-primary disabled" role="button" aria-disabled="true" data-path="files/Downloads/Sample Essay.pdf" data-date="2026-02-23" data-label='&lt;img src="images/file.png" class="icon-img" alt="icon"&gt; Sample Essay (available from February 23)'>
+<img src="images/file.png" class="icon-img" alt="icon"> Sample Essay (available from February 23)
+</a></p>
+<p><a class="delayed-download btn btn-primary disabled" role="button" aria-disabled="true" data-path="files/Downloads/88_annotated.pdf" data-date="2026-03-04" data-label='&lt;img src="images/file.png" class="icon-img" alt="icon"&gt; Sample Essay Annotated (available from March 4)'>
+<img src="images/file.png" class="icon-img" alt="icon"> Sample Essay Annotated (available from March 4)
+</a></p>
+<p> </p>
 <p><strong>Students as Researchers:</strong></p>
 <ul>
 <li>Choose the region for your summative assessment. Create an outline (A4, bullet points), summarising the content of Research Question, Theory/Literature, Hypotheses, and Methodology. Bring this to the seminar of Week 8.</li>
@@ -138,7 +146,24 @@
 </ul>
 <hr>
 </div>
-  <div class="chapter-nav">
+<script>
+  document.addEventListener("DOMContentLoaded", function () {
+    const buttons = document.querySelectorAll(".delayed-download");
+
+    buttons.forEach(function (btn) {
+      const releaseDate = new Date(btn.dataset.date);
+      const now = new Date();
+
+      if (now >= releaseDate) {
+        btn.classList.remove("disabled");
+        btn.setAttribute("aria-disabled", "false");
+        btn.setAttribute("href", btn.dataset.path);
+        btn.setAttribute("download", btn.dataset.path.split('/').pop());
+        btn.innerHTML = btn.dataset.label || "📄 Download Document";
+      }
+    });
+  });
+</script><div class="chapter-nav">
 <div class="prev"><a href="exercises-2.html">Exercises</a></div>
 <div class="next"><a href="glossary-5.html">Glossary</a></div>
 </div></main><div class="col-md-3 col-lg-2 d-none d-md-block sidebar sidebar-chapter">
@@ -160,7 +185,7 @@
 
   <div class="col-12 col-md-6 mt-3">
     <p>"<strong><p><img src="images/Crest_white.png" width="75" style="display:block; margin:auto; margin-bottom:3em;"> PO33Q: Determinants of Democracy – <br> Analysing Emergence, Survival, and Fall</p></strong>" was written by </p>
-<p><strong>Dr Flo Reiche</strong> <br><strong>Department of Politics and International Studies</strong> <br><strong>University of Warwick</strong></p>. It was last built on 29 July, 2025.
+<p><strong>Dr Flo Reiche</strong> <br><strong>Department of Politics and International Studies</strong> <br><strong>University of Warwick</strong></p>. It was last built on 31 July, 2025.
   </div>
 
   <div class="col-12 col-md-6 mt-3">
