--- a/flashcards-4.html
+++ b/flashcards-4.html
@@ -43,9 +43,9 @@
     }
   </style>
 <link rel="stylesheet" href="style.css">
-<meta name="description" content="R Functions This Week     The data are available as a .csv file.  All R Functions So Far     The data are available as a .csv file.">
-<meta property="og:description" content="R Functions This Week     The data are available as a .csv file.  All R Functions So Far     The data are available as a .csv file.">
-<meta name="twitter:description" content="R Functions This Week     The data are available as a .csv file.  All R Functions So Far     The data are available as a .csv file.">
+<meta name="description" content='R Functions This Week     The data are available as a .csv file.  All R Functions So Far     The data are available as a .csv file.     document.addEventListener("DOMContentLoaded", function () { ...'>
+<meta property="og:description" content='R Functions This Week     The data are available as a .csv file.  All R Functions So Far     The data are available as a .csv file.     document.addEventListener("DOMContentLoaded", function () { ...'>
+<meta name="twitter:description" content='R Functions This Week     The data are available as a .csv file.  All R Functions So Far     The data are available as a .csv file.     document.addEventListener("DOMContentLoaded", function () { ...'>
 </head>
 <body data-spy="scroll" data-target="#toc">
 
@@ -156,7 +156,24 @@ The data are available as a <a href="files/excelfiles/PO33Q_Week%205_Consolidate
 
 
 
-  <div class="chapter-nav">
+<script>
+  document.addEventListener("DOMContentLoaded", function () {
+    const buttons = document.querySelectorAll(".delayed-download");
+
+    buttons.forEach(function (btn) {
+      const releaseDate = new Date(btn.dataset.date);
+      const now = new Date();
+
+      if (now >= releaseDate) {
+        btn.classList.remove("disabled");
+        btn.setAttribute("aria-disabled", "false");
+        btn.setAttribute("href", btn.dataset.path);
+        btn.setAttribute("download", btn.dataset.path.split('/').pop());
+        btn.innerHTML = btn.dataset.label || "📄 Download Document";
+      }
+    });
+  });
+</script><div class="chapter-nav">
 <div class="prev"><a href="glossary-4.html">Glossary</a></div>
 <div class="next"><a href="markov-transition-models.html">Markov Transition Models</a></div>
 </div></main><div class="col-md-3 col-lg-2 d-none d-md-block sidebar sidebar-chapter">
@@ -178,7 +195,7 @@ The data are available as a <a href="files/excelfiles/PO33Q_Week%205_Consolidate
 
   <div class="col-12 col-md-6 mt-3">
     <p>"<strong><p><img src="images/Crest_white.png" width="75" style="display:block; margin:auto; margin-bottom:3em;"> PO33Q: Determinants of Democracy – <br> Analysing Emergence, Survival, and Fall</p></strong>" was written by </p>
-<p><strong>Dr Flo Reiche</strong> <br><strong>Department of Politics and International Studies</strong> <br><strong>University of Warwick</strong></p>. It was last built on 29 July, 2025.
+<p><strong>Dr Flo Reiche</strong> <br><strong>Department of Politics and International Studies</strong> <br><strong>University of Warwick</strong></p>. It was last built on 31 July, 2025.
   </div>
 
   <div class="col-12 col-md-6 mt-3">
