--- a/model-building.html
+++ b/model-building.html
@@ -155,8 +155,8 @@
 
     <script>
 
-      function styleCell_056x9k7seyls6hmnl0b3(i, j, css_id) {
-          var table = document.getElementById("tinytable_056x9k7seyls6hmnl0b3");
+      function styleCell_fla2udedmocgo3mg6aox(i, j, css_id) {
+          var table = document.getElementById("tinytable_fla2udedmocgo3mg6aox");
           var cell = table.rows[i]?.cells[j];  // Safe navigation to avoid errors
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -166,7 +166,7 @@
           }
       }
       function insertSpanRow(i, colspan, content) {
-        var table = document.getElementById('tinytable_056x9k7seyls6hmnl0b3');
+        var table = document.getElementById('tinytable_fla2udedmocgo3mg6aox');
         var newRow = table.insertRow(i);
         var newCell = newRow.insertCell(0);
         newCell.setAttribute("colspan", colspan);
@@ -174,8 +174,8 @@
         // this may be unsafe, but innerText does not interpret <br>
         newCell.innerHTML = content;
       }
-      function spanCell_056x9k7seyls6hmnl0b3(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_056x9k7seyls6hmnl0b3");
+      function spanCell_fla2udedmocgo3mg6aox(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_fla2udedmocgo3mg6aox");
         const targetRow = table.rows[i];
         const targetCell = targetRow.cells[j];
         for (let r = 0; r < rowspan; r++) {
@@ -205,38 +205,38 @@
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: 0, j: 2 }, { i: 0, j: 3 },  ], css_id: 'tinytable_css_ksdq3aonanp4ds20gs6e',}, 
-          { positions: [ { i: 7, j: 1 }, { i: 7, j: 2 }, { i: 7, j: 3 },  ], css_id: 'tinytable_css_cooj4y89315vq674djdx',}, 
-          { positions: [ { i: 2, j: 1 }, { i: 3, j: 1 }, { i: 5, j: 1 }, { i: 6, j: 1 }, { i: 3, j: 2 }, { i: 5, j: 2 }, { i: 2, j: 2 }, { i: 3, j: 3 }, { i: 4, j: 1 }, { i: 5, j: 3 }, { i: 6, j: 2 }, { i: 4, j: 2 }, { i: 2, j: 3 }, { i: 4, j: 3 }, { i: 6, j: 3 },  ], css_id: 'tinytable_css_co896aa7rqhkv8vnuuh2',}, 
-          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_hinau317wls81haxe002',}, 
-          { positions: [ { i: 1, j: 1 }, { i: 1, j: 2 }, { i: 1, j: 3 },  ], css_id: 'tinytable_css_n2xy6oikln0wlgzxynre',}, 
-          { positions: [ { i: 7, j: 0 },  ], css_id: 'tinytable_css_8vdc43dr4i7z4x0cmcml',}, 
-          { positions: [ { i: 2, j: 0 }, { i: 3, j: 0 }, { i: 4, j: 0 }, { i: 5, j: 0 }, { i: 6, j: 0 },  ], css_id: 'tinytable_css_y7kdcun7iju8ftkqk3t4',}, 
-          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_wqq6654nwy2kr9u1y6rz',}, 
-          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_jwpck5nm9uadz2c9hopa',}, 
+          { positions: [ { i: 0, j: 2 }, { i: 0, j: 3 },  ], css_id: 'tinytable_css_wpy52hax5rxgjgpie682',}, 
+          { positions: [ { i: 7, j: 1 }, { i: 7, j: 2 }, { i: 7, j: 3 },  ], css_id: 'tinytable_css_9z4cds7lyg9hkjid8lf3',}, 
+          { positions: [ { i: 2, j: 1 }, { i: 3, j: 1 }, { i: 5, j: 1 }, { i: 6, j: 1 }, { i: 3, j: 2 }, { i: 5, j: 2 }, { i: 2, j: 2 }, { i: 3, j: 3 }, { i: 4, j: 1 }, { i: 5, j: 3 }, { i: 6, j: 2 }, { i: 4, j: 2 }, { i: 2, j: 3 }, { i: 4, j: 3 }, { i: 6, j: 3 },  ], css_id: 'tinytable_css_7qaqvqf0fsmk08pwiw98',}, 
+          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_7ikkdapb0n80vr0azdfr',}, 
+          { positions: [ { i: 1, j: 1 }, { i: 1, j: 2 }, { i: 1, j: 3 },  ], css_id: 'tinytable_css_etf0a30or2wpew3fj1hq',}, 
+          { positions: [ { i: 7, j: 0 },  ], css_id: 'tinytable_css_dljhefz0rhh0x33oxh9d',}, 
+          { positions: [ { i: 2, j: 0 }, { i: 3, j: 0 }, { i: 4, j: 0 }, { i: 5, j: 0 }, { i: 6, j: 0 },  ], css_id: 'tinytable_css_fy06ufn400g8iefhrgic',}, 
+          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_3ub739ta0bc1314v8mkm',}, 
+          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_b974zty2as2peql8p8zn',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_056x9k7seyls6hmnl0b3(cell.i, cell.j, group.css_id);
+                  styleCell_fla2udedmocgo3mg6aox(cell.i, cell.j, group.css_id);
               });
           });
       });
     </script><style>
       /* tinytable css entries after */
-      .table td.tinytable_css_ksdq3aonanp4ds20gs6e, .table th.tinytable_css_ksdq3aonanp4ds20gs6e { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_cooj4y89315vq674djdx, .table th.tinytable_css_cooj4y89315vq674djdx { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_co896aa7rqhkv8vnuuh2, .table th.tinytable_css_co896aa7rqhkv8vnuuh2 { text-align: center; }
-      .table td.tinytable_css_hinau317wls81haxe002, .table th.tinytable_css_hinau317wls81haxe002 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_n2xy6oikln0wlgzxynre, .table th.tinytable_css_n2xy6oikln0wlgzxynre { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_8vdc43dr4i7z4x0cmcml, .table th.tinytable_css_8vdc43dr4i7z4x0cmcml { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_y7kdcun7iju8ftkqk3t4, .table th.tinytable_css_y7kdcun7iju8ftkqk3t4 { text-align: left; }
-      .table td.tinytable_css_wqq6654nwy2kr9u1y6rz, .table th.tinytable_css_wqq6654nwy2kr9u1y6rz { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_jwpck5nm9uadz2c9hopa, .table th.tinytable_css_jwpck5nm9uadz2c9hopa { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_wpy52hax5rxgjgpie682, .table th.tinytable_css_wpy52hax5rxgjgpie682 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_9z4cds7lyg9hkjid8lf3, .table th.tinytable_css_9z4cds7lyg9hkjid8lf3 { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_7qaqvqf0fsmk08pwiw98, .table th.tinytable_css_7qaqvqf0fsmk08pwiw98 { text-align: center; }
+      .table td.tinytable_css_7ikkdapb0n80vr0azdfr, .table th.tinytable_css_7ikkdapb0n80vr0azdfr { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_etf0a30or2wpew3fj1hq, .table th.tinytable_css_etf0a30or2wpew3fj1hq { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_dljhefz0rhh0x33oxh9d, .table th.tinytable_css_dljhefz0rhh0x33oxh9d { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_fy06ufn400g8iefhrgic, .table th.tinytable_css_fy06ufn400g8iefhrgic { text-align: left; }
+      .table td.tinytable_css_3ub739ta0bc1314v8mkm, .table th.tinytable_css_3ub739ta0bc1314v8mkm { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_b974zty2as2peql8p8zn, .table th.tinytable_css_b974zty2as2peql8p8zn { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
 <div class="container">
-      <div class="inline-table"><table class="table table-borderless" id="tinytable_056x9k7seyls6hmnl0b3" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <div class="inline-table"><table class="table table-borderless" id="tinytable_fla2udedmocgo3mg6aox" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
 <thead>
 <tr>
 <th scope="col" align="center" colspan="1"> </th>
@@ -317,7 +317,24 @@
 </ul>
 </div>
 </div>
-  <div class="chapter-nav">
+<script>
+  document.addEventListener("DOMContentLoaded", function () {
+    const buttons = document.querySelectorAll(".delayed-download");
+
+    buttons.forEach(function (btn) {
+      const releaseDate = new Date(btn.dataset.date);
+      const now = new Date();
+
+      if (now >= releaseDate) {
+        btn.classList.remove("disabled");
+        btn.setAttribute("aria-disabled", "false");
+        btn.setAttribute("href", btn.dataset.path);
+        btn.setAttribute("download", btn.dataset.path.split('/').pop());
+        btn.innerHTML = btn.dataset.label || "📄 Download Document";
+      }
+    });
+  });
+</script><div class="chapter-nav">
 <div class="prev"><a href="missing-data.html">Missing Data</a></div>
 <div class="next"><a href="homework-for-week-5.html">Homework for Week 5</a></div>
 </div></main><div class="col-md-3 col-lg-2 d-none d-md-block sidebar sidebar-chapter">
@@ -343,7 +360,7 @@
 
   <div class="col-12 col-md-6 mt-3">
     <p>"<strong><p><img src="images/Crest_white.png" width="75" style="display:block; margin:auto; margin-bottom:3em;"> PO33Q: Determinants of Democracy – <br> Analysing Emergence, Survival, and Fall</p></strong>" was written by </p>
-<p><strong>Dr Flo Reiche</strong> <br><strong>Department of Politics and International Studies</strong> <br><strong>University of Warwick</strong></p>. It was last built on 29 July, 2025.
+<p><strong>Dr Flo Reiche</strong> <br><strong>Department of Politics and International Studies</strong> <br><strong>University of Warwick</strong></p>. It was last built on 31 July, 2025.
   </div>
 
   <div class="col-12 col-md-6 mt-3">
