--- a/model-fit-in-binary-response-models.html
+++ b/model-fit-in-binary-response-models.html
@@ -992,8 +992,8 @@ Figure 37: ROC Curve
 
     <script>
 
-      function styleCell_q1640qitd7xh0eywvzqo(i, j, css_id) {
-          var table = document.getElementById("tinytable_q1640qitd7xh0eywvzqo");
+      function styleCell_l9n00d0wo7irhicdhqzr(i, j, css_id) {
+          var table = document.getElementById("tinytable_l9n00d0wo7irhicdhqzr");
           var cell = table.rows[i]?.cells[j];  // Safe navigation to avoid errors
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -1003,7 +1003,7 @@ Figure 37: ROC Curve
           }
       }
       function insertSpanRow(i, colspan, content) {
-        var table = document.getElementById('tinytable_q1640qitd7xh0eywvzqo');
+        var table = document.getElementById('tinytable_l9n00d0wo7irhicdhqzr');
         var newRow = table.insertRow(i);
         var newCell = newRow.insertCell(0);
         newCell.setAttribute("colspan", colspan);
@@ -1011,8 +1011,8 @@ Figure 37: ROC Curve
         // this may be unsafe, but innerText does not interpret <br>
         newCell.innerHTML = content;
       }
-      function spanCell_q1640qitd7xh0eywvzqo(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_q1640qitd7xh0eywvzqo");
+      function spanCell_l9n00d0wo7irhicdhqzr(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_l9n00d0wo7irhicdhqzr");
         const targetRow = table.rows[i];
         const targetCell = targetRow.cells[j];
         for (let r = 0; r < rowspan; r++) {
@@ -1042,48 +1042,48 @@ Figure 37: ROC Curve
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: 1, j: 4 }, { i: 1, j: 3 },  ], css_id: 'tinytable_css_k7982h5zj4ershd3r2ni',}, 
-          { positions: [ { i: 0, j: 3 }, { i: 0, j: 2 }, { i: 0, j: 4 },  ], css_id: 'tinytable_css_5amnuie8ediunwc4wgol',}, 
-          { positions: [ { i: 12, j: 1 }, { i: 12, j: 4 }, { i: 12, j: 2 }, { i: 12, j: 3 },  ], css_id: 'tinytable_css_v7thqn4j2th5jp3eb5hy',}, 
-          { positions: [ { i: 10, j: 3 }, { i: 10, j: 2 }, { i: 10, j: 4 }, { i: 10, j: 1 },  ], css_id: 'tinytable_css_78wxxxdm908l9xqc29a0',}, 
-          { positions: [ { i: 4, j: 1 }, { i: 3, j: 1 }, { i: 8, j: 1 }, { i: 5, j: 1 }, { i: 7, j: 1 }, { i: 3, j: 2 }, { i: 9, j: 1 }, { i: 6, j: 1 }, { i: 11, j: 1 }, { i: 7, j: 2 }, { i: 4, j: 2 }, { i: 5, j: 2 }, { i: 6, j: 2 }, { i: 11, j: 2 }, { i: 8, j: 2 }, { i: 9, j: 2 }, { i: 5, j: 3 }, { i: 6, j: 3 }, { i: 3, j: 3 }, { i: 4, j: 3 }, { i: 9, j: 3 }, { i: 5, j: 4 }, { i: 7, j: 3 }, { i: 8, j: 3 }, { i: 4, j: 4 }, { i: 9, j: 4 }, { i: 11, j: 3 }, { i: 3, j: 4 }, { i: 8, j: 4 }, { i: 6, j: 4 }, { i: 7, j: 4 }, { i: 11, j: 4 },  ], css_id: 'tinytable_css_q4yvcsk1xfq2atw1k8e9',}, 
-          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_1gz47rasekln58frkl08',}, 
-          { positions: [ { i: 1, j: 1 }, { i: 1, j: 2 },  ], css_id: 'tinytable_css_81xbnu7s1o7rkp4nkpxf',}, 
-          { positions: [ { i: 2, j: 1 }, { i: 2, j: 2 }, { i: 2, j: 3 }, { i: 2, j: 4 },  ], css_id: 'tinytable_css_boi4p4gyxdjuj5x58fdi',}, 
-          { positions: [ { i: 12, j: 0 },  ], css_id: 'tinytable_css_j39fbk2dvhjbwxbed4ot',}, 
-          { positions: [ { i: 10, j: 0 },  ], css_id: 'tinytable_css_pydz5ihjkb95d4l5zb1x',}, 
-          { positions: [ { i: 3, j: 0 }, { i: 4, j: 0 }, { i: 5, j: 0 }, { i: 6, j: 0 }, { i: 7, j: 0 }, { i: 8, j: 0 }, { i: 9, j: 0 }, { i: 11, j: 0 },  ], css_id: 'tinytable_css_ut4er0x6psaj9yoi4h3r',}, 
-          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_yls9jnms6edmbndkwll4',}, 
-          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_0nagunq8xrq2821h30a3',}, 
-          { positions: [ { i: 2, j: 0 },  ], css_id: 'tinytable_css_qme37r4k0m9r9k06ze8w',}, 
+          { positions: [ { i: 1, j: 4 }, { i: 1, j: 3 },  ], css_id: 'tinytable_css_6v3sqtayc7qi5ryuh300',}, 
+          { positions: [ { i: 0, j: 3 }, { i: 0, j: 2 }, { i: 0, j: 4 },  ], css_id: 'tinytable_css_yroisfrcsraptouz7lb6',}, 
+          { positions: [ { i: 12, j: 1 }, { i: 12, j: 4 }, { i: 12, j: 2 }, { i: 12, j: 3 },  ], css_id: 'tinytable_css_gttcm5wxgejmsznphum5',}, 
+          { positions: [ { i: 10, j: 3 }, { i: 10, j: 2 }, { i: 10, j: 4 }, { i: 10, j: 1 },  ], css_id: 'tinytable_css_d086ygbygvkw4xuhgvhq',}, 
+          { positions: [ { i: 4, j: 1 }, { i: 3, j: 1 }, { i: 8, j: 1 }, { i: 5, j: 1 }, { i: 7, j: 1 }, { i: 3, j: 2 }, { i: 9, j: 1 }, { i: 6, j: 1 }, { i: 11, j: 1 }, { i: 7, j: 2 }, { i: 4, j: 2 }, { i: 5, j: 2 }, { i: 6, j: 2 }, { i: 11, j: 2 }, { i: 8, j: 2 }, { i: 9, j: 2 }, { i: 5, j: 3 }, { i: 6, j: 3 }, { i: 3, j: 3 }, { i: 4, j: 3 }, { i: 9, j: 3 }, { i: 5, j: 4 }, { i: 7, j: 3 }, { i: 8, j: 3 }, { i: 4, j: 4 }, { i: 9, j: 4 }, { i: 11, j: 3 }, { i: 3, j: 4 }, { i: 8, j: 4 }, { i: 6, j: 4 }, { i: 7, j: 4 }, { i: 11, j: 4 },  ], css_id: 'tinytable_css_78tr716avy6oo07aff6n',}, 
+          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_tx43ze7nrdxo53cetq9d',}, 
+          { positions: [ { i: 1, j: 1 }, { i: 1, j: 2 },  ], css_id: 'tinytable_css_8fv16ng1bdkjgmijzs5u',}, 
+          { positions: [ { i: 2, j: 1 }, { i: 2, j: 2 }, { i: 2, j: 3 }, { i: 2, j: 4 },  ], css_id: 'tinytable_css_899yf0m43rxutoy597el',}, 
+          { positions: [ { i: 12, j: 0 },  ], css_id: 'tinytable_css_h9mfg90oy4d7ehz98th8',}, 
+          { positions: [ { i: 10, j: 0 },  ], css_id: 'tinytable_css_1ts5uchgr7uwk4xhyy1u',}, 
+          { positions: [ { i: 3, j: 0 }, { i: 4, j: 0 }, { i: 5, j: 0 }, { i: 6, j: 0 }, { i: 7, j: 0 }, { i: 8, j: 0 }, { i: 9, j: 0 }, { i: 11, j: 0 },  ], css_id: 'tinytable_css_yleo7skputry12luq1b1',}, 
+          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_w7m2bnzpz0gr4w3f47jn',}, 
+          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_gk51yh13z4zalyo9ly0d',}, 
+          { positions: [ { i: 2, j: 0 },  ], css_id: 'tinytable_css_dx3fvhed8qy6iabrl35v',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_q1640qitd7xh0eywvzqo(cell.i, cell.j, group.css_id);
+                  styleCell_l9n00d0wo7irhicdhqzr(cell.i, cell.j, group.css_id);
               });
           });
       });
     </script><style>
       /* tinytable css entries after */
-      .table td.tinytable_css_k7982h5zj4ershd3r2ni, .table th.tinytable_css_k7982h5zj4ershd3r2ni { text-align: center; text-align: center; }
-      .table td.tinytable_css_5amnuie8ediunwc4wgol, .table th.tinytable_css_5amnuie8ediunwc4wgol { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_v7thqn4j2th5jp3eb5hy, .table th.tinytable_css_v7thqn4j2th5jp3eb5hy { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_78wxxxdm908l9xqc29a0, .table th.tinytable_css_78wxxxdm908l9xqc29a0 { text-align: center; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_q4yvcsk1xfq2atw1k8e9, .table th.tinytable_css_q4yvcsk1xfq2atw1k8e9 { text-align: center; }
-      .table td.tinytable_css_1gz47rasekln58frkl08, .table th.tinytable_css_1gz47rasekln58frkl08 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_81xbnu7s1o7rkp4nkpxf, .table th.tinytable_css_81xbnu7s1o7rkp4nkpxf { text-align: center; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_boi4p4gyxdjuj5x58fdi, .table th.tinytable_css_boi4p4gyxdjuj5x58fdi { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_j39fbk2dvhjbwxbed4ot, .table th.tinytable_css_j39fbk2dvhjbwxbed4ot { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_pydz5ihjkb95d4l5zb1x, .table th.tinytable_css_pydz5ihjkb95d4l5zb1x { text-align: left; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_ut4er0x6psaj9yoi4h3r, .table th.tinytable_css_ut4er0x6psaj9yoi4h3r { text-align: left; }
-      .table td.tinytable_css_yls9jnms6edmbndkwll4, .table th.tinytable_css_yls9jnms6edmbndkwll4 { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_0nagunq8xrq2821h30a3, .table th.tinytable_css_0nagunq8xrq2821h30a3 { text-align: left; text-align: center; }
-      .table td.tinytable_css_qme37r4k0m9r9k06ze8w, .table th.tinytable_css_qme37r4k0m9r9k06ze8w { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_6v3sqtayc7qi5ryuh300, .table th.tinytable_css_6v3sqtayc7qi5ryuh300 { text-align: center; text-align: center; }
+      .table td.tinytable_css_yroisfrcsraptouz7lb6, .table th.tinytable_css_yroisfrcsraptouz7lb6 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_gttcm5wxgejmsznphum5, .table th.tinytable_css_gttcm5wxgejmsznphum5 { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_d086ygbygvkw4xuhgvhq, .table th.tinytable_css_d086ygbygvkw4xuhgvhq { text-align: center; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_78tr716avy6oo07aff6n, .table th.tinytable_css_78tr716avy6oo07aff6n { text-align: center; }
+      .table td.tinytable_css_tx43ze7nrdxo53cetq9d, .table th.tinytable_css_tx43ze7nrdxo53cetq9d { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_8fv16ng1bdkjgmijzs5u, .table th.tinytable_css_8fv16ng1bdkjgmijzs5u { text-align: center; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_899yf0m43rxutoy597el, .table th.tinytable_css_899yf0m43rxutoy597el { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_h9mfg90oy4d7ehz98th8, .table th.tinytable_css_h9mfg90oy4d7ehz98th8 { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_1ts5uchgr7uwk4xhyy1u, .table th.tinytable_css_1ts5uchgr7uwk4xhyy1u { text-align: left; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_yleo7skputry12luq1b1, .table th.tinytable_css_yleo7skputry12luq1b1 { text-align: left; }
+      .table td.tinytable_css_w7m2bnzpz0gr4w3f47jn, .table th.tinytable_css_w7m2bnzpz0gr4w3f47jn { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_gk51yh13z4zalyo9ly0d, .table th.tinytable_css_gk51yh13z4zalyo9ly0d { text-align: left; text-align: center; }
+      .table td.tinytable_css_dx3fvhed8qy6iabrl35v, .table th.tinytable_css_dx3fvhed8qy6iabrl35v { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
 <div class="container">
-      <div class="inline-table"><table class="table table-borderless" id="tinytable_q1640qitd7xh0eywvzqo" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
+      <div class="inline-table"><table class="table table-borderless" id="tinytable_l9n00d0wo7irhicdhqzr" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing="true">
 <thead>
 <tr>
 <th scope="col" align="center" colspan="1"> </th>
@@ -1274,7 +1274,24 @@ Full code you can adapt for the assessment
 </div>
 </div>
 
-  <div class="chapter-nav">
+<script>
+  document.addEventListener("DOMContentLoaded", function () {
+    const buttons = document.querySelectorAll(".delayed-download");
+
+    buttons.forEach(function (btn) {
+      const releaseDate = new Date(btn.dataset.date);
+      const now = new Date();
+
+      if (now >= releaseDate) {
+        btn.classList.remove("disabled");
+        btn.setAttribute("aria-disabled", "false");
+        btn.setAttribute("href", btn.dataset.path);
+        btn.setAttribute("download", btn.dataset.path.split('/').pop());
+        btn.innerHTML = btn.dataset.label || "📄 Download Document";
+      }
+    });
+  });
+</script><div class="chapter-nav">
 <div class="prev"><a href="markov-transition-models.html">Markov Transition Models</a></div>
 <div class="next"><a href="joint-estimation-of-emergence-and-survival.html">Joint Estimation of Emergence and Survival</a></div>
 </div></main><div class="col-md-3 col-lg-2 d-none d-md-block sidebar sidebar-chapter">
@@ -1308,7 +1325,7 @@ Full code you can adapt for the assessment
 
   <div class="col-12 col-md-6 mt-3">
     <p>"<strong><p><img src="images/Crest_white.png" width="75" style="display:block; margin:auto; margin-bottom:3em;"> PO33Q: Determinants of Democracy – <br> Analysing Emergence, Survival, and Fall</p></strong>" was written by </p>
-<p><strong>Dr Flo Reiche</strong> <br><strong>Department of Politics and International Studies</strong> <br><strong>University of Warwick</strong></p>. It was last built on 29 July, 2025.
+<p><strong>Dr Flo Reiche</strong> <br><strong>Department of Politics and International Studies</strong> <br><strong>University of Warwick</strong></p>. It was last built on 31 July, 2025.
   </div>
 
   <div class="col-12 col-md-6 mt-3">
