--- a/homework-for-week-8.html
+++ b/homework-for-week-8.html
@@ -130,7 +130,7 @@
 <li>Finish this week’s worksheet</li>
 <li>Read the <a href="https://rl.talis.com/3/warwick/lists/E5FA4027-27A7-AFB0-AAF4-C891BCCD83E2.html#D3AE6FE6-BC94-45C6-68DA-576418AD3AC2">required literature for Week 8</a>
 </li>
-<li>Mark the essay linked below. We will go through this in Week 8. The fully annotated version (below) will become availabel after the seminar in Week 8.</li>
+<li>Mark the essay linked below. We will go through this in Week 8. The fully annotated version (below) will become available after the seminar in Week 8.</li>
 </ul>
 <p><a class="delayed-download btn btn-primary disabled" role="button" aria-disabled="true" data-path="files/Downloads/Sample Essay.pdf" data-date="2026-02-23" data-label='&lt;img src="images/file.png" class="icon-img" alt="icon"&gt; Sample Essay (available from February 23)'>
 <img src="images/file.png" class="icon-img" alt="icon"> Sample Essay (available from February 23)
@@ -139,6 +139,9 @@
 <img src="images/file.png" class="icon-img" alt="icon"> Sample Essay Annotated (available from March 4)
 </a></p>
 <p> </p>
+<div style="display:none;">
+<p><embed src="files/Downloads/88_annotated.pdf"></embed><embed src="files/Downloads/Sample%20Essay.pdf"></embed></p>
+</div>
 <p><strong>Students as Researchers:</strong></p>
 <ul>
 <li>Choose the region for your summative assessment. Create an outline (A4, bullet points), summarising the content of Research Question, Theory/Literature, Hypotheses, and Methodology. Bring this to the seminar of Week 8.</li>
