--- a/linear-regression-application.html
+++ b/linear-regression-application.html
@@ -257,8 +257,8 @@ Figure 23: Visualisation of p-value
 <p><strong>Interpreting a coefficient</strong></p>
 <p>The order in which to interpret a coefficient is as follows:</p>
 <ol style="list-style-type: decimal">
-<li>Is it significant? If not, all you can say is that there is no influence. You have falsified the alternative hypothesis.</li>
-<li>If it is significant, you can interpret its size and direction according to the statistical model (for example, slope coefficnet vs. partial slope coefficient).</li>
+<li>Is it significant? If not, all you can say is that there is no influence. There is insufficient evidence to support the alternative hypothesis.</li>
+<li>If it is significant, you can interpret its size and direction according to the statistical model (for example, slope coefficent vs. partial slope coefficient).</li>
 <li>What does the coefficient mean for the hypothesis? Look at the direction. Is the direction as predicted by the hypothesis? Then you have evidence to support the hypothesis. If the direction is inverse, then you have falsified the hypothesis, even though you have a significant coefficient.</li>
 </ol>
 </div>
@@ -428,7 +428,7 @@ F-statistic: 7.913 on 2 and 22 DF,  p-value: 0.002577</code></pre>
 
   <div class="col-12 col-md-6 mt-3">
     <p>"<strong><p><img src="images/Crest_white.png" width="75" style="display:block; margin:auto; margin-bottom:3em;"> PO33Q: Determinants of Democracy – <br> Analysing Emergence, Survival, and Fall</p></strong>" was written by </p>
-<p><strong>Dr Flo Reiche</strong> <br><strong>Department of Politics and International Studies</strong> <br><strong>University of Warwick</strong></p>. It was last built on 01 August, 2025.
+<p><strong>Dr Flo Reiche</strong> <br><strong>Department of Politics and International Studies</strong> <br><strong>University of Warwick</strong></p>. It was last built on 04 August, 2025.
   </div>
 
   <div class="col-12 col-md-6 mt-3">
