--- a/principles-of-statistical-inference.html
+++ b/principles-of-statistical-inference.html
@@ -286,6 +286,40 @@ Figure 12: The p-Value
 </p>
 </div>
 <p>I have displayed this here as a two-sided test. We did not specify whether we expect the level of democracy in the Middle East to be higher or lower than in Europe, just different. As both directions are therefore possible, the p-value is made up of the sum of the areas in the left and the right tails of the distribution. One-sided tests are possible, but generally in regression analysis the test is two-sided which is why I will leave it at that here.</p>
+<div class="bulb">
+<p><strong>Interpreting Significance Tests</strong></p>
+<p>In these exercises, and when reporting statistical results more generally, you’ll be required to interpret the outcome of a significance test. To do this well, it’s important to use language that reflects what null hypothesis significance testing (NHST) actually tells us, without overstating what the test can conclude.</p>
+<p>NHST works by starting with the null hypothesis - usually a claim like “there is no effect” or “there is no difference”. We use the data to test whether that assumption is plausible. If the p-value is small, it means that results as extreme as the one we observed — or more extreme — would be rare if the null hypothesis were true. So, we take that as evidence against the null. But if the p-value is large, then the data are consistent with the null. And that’s where your interpretation should stop (at least at the introductory level, to avoid stretching and overstating).</p>
+<p>If your p-value is small enough, you can say things like:</p>
+<ul>
+<li>“There is evidence of an effect.”</li>
+<li>“We reject the null hypothesis.”</li>
+<li>“The data provide evidence against the null hypothesis.”</li>
+<li>“There is statistically significant evidence of a difference (or relationship, or effect).”</li>
+</ul>
+<p>Avoid phrasing that implies certainty, such as:</p>
+<ul>
+<li>❌ “We proved the alternative hypothesis.”</li>
+<li>❌ “We proved that there is an effect.”</li>
+<li>❌ “We accept the alternative hypothesis.”</li>
+</ul>
+<p>Similarly, if your p-value is too large to reject the null hypothesis, you can say things like:</p>
+<ul>
+<li>“There is no effect.”</li>
+<li>“There is no evidence of a difference (or relationship, or effect).”</li>
+<li>“We cannot reject the null hypothesis.”</li>
+<li>“The results are consistent with the null hypothesis.”</li>
+</ul>
+<p>Avoid phrasing that overstates what the test can tell you, such as:</p>
+<ul>
+<li>❌ “We proved the null hypothesis.”<br>
+</li>
+<li>❌ “We reject the alternative hypothesis.”<br>
+</li>
+<li>❌ “The null hypothesis is true.”</li>
+</ul>
+<p>Having taught quantitative political analysis for many years, I know that students love to use the word “prove” when they interpret their results. But there is no proof in significance testing, because we deal with probability statements, not certainty.</p>
+</div>
 <p>And with that, we are finally ready to turn our attention to the actual topic for today: linear regression.</p>
 </div>
 </div>
