--- a/list-of-references.html
+++ b/list-of-references.html
@@ -173,7 +173,7 @@ Miller, M., Boix, C., &amp; Rosato, S. (2022). <em><span class="nocase">Boix-Mil
 Oxford Learner’s Dictionaries. (n.d.). <a href="https://www.oxfordlearnersdictionaries.com/">https://www.oxfordlearnersdictionaries.com/</a>
 </div>
 <div id="ref-prz:2000" class="csl-entry">
-Przeworski, A., Alvarez, M. E., Cheibub, J. A., &amp; Limongi, F. (2000). <em><span class="nocase">Democracy and Development - Political Institutions and Well-Being in the World, 1950-1990</span></em>. Cambridge: Cambridge University Press. https://doi.org/<a href="https://doi.org/10.1017/CBO9780511804946">https://doi.org/10.1017/CBO9780511804946</a>
+Przeworski, A., Alvarez, M. E., Cheibub, J. A., &amp; Limongi, F. (2000). <em><span class="nocase">Democracy and Development - Political Institutions and Well-Being in the World, 1950-1990</span></em>. Cambridge: Cambridge University Press. <a href="https://doi.org/10.1017/CBO9780511804946">https://doi.org/10.1017/CBO9780511804946</a>
 </div>
 <div id="ref-reiche:forthcoming" class="csl-entry">
 Reiche, F. (forthcoming). <em><span class="nocase">Introduction to Quantitative Methods in the Social Sciences</span></em>. Oxford: Oxford University Press.
